<resources>
    <string name="app_name">Jobs233</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="password_advice">All new passwords must contain at least 8 characters.</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="account_information">Account Information</string>
    <string name="t_and_c_use">By clicking the button below, your agree to our Terms and Conditions of use</string>
    <string name="hire">Hire</string>
    <string name="register">Register</string>
    <string name="work">Work</string>
    <string name="account_type">Account Type</string>
    <string name="already_a_member">Already a member?\ </string>
    <string name="login">Login</string>
    <string name="email_username">Email / Username</string>
    <string name="login_logo">login logo</string>
    <string name="signup">SignUp</string>
    <string name="not_a_member">Not a member?</string>
    <string name="splash_image">splash image</string>
    <string name="dashboard">Dashboard</string>
    <string name="projects">Projects</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="earned_this_month">Earned This Month</string>
    <string name="projects_assigned">Assigned Projects</string>
    <string name="projects_completed">Completed Projects</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis tellus id maximus faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="tags_skills"><![CDATA[Tags & Skills:]]></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_internet_message">Unable to connect to the internet. \n Please check your internet connection.</string>
    <string name="some_tags_and_skills">Some tags and skills</string>
    <string name="bidding_amount">Bidding Amount</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="wallet">Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="bio">Bio</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gender">Gender</string>
    <string name="upload">Upload</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="tap_to_choose">Tap to choose</string>
    <string name="title">Title</string>
</resources>