<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_outline_dashboard_24"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/projectsFragment"
        android:icon="@drawable/ic_work_outline_24"
        android:title="@string/projects" />

    <item
        android:id="@+id/inboxFragment"
        android:icon="@drawable/ic_outline_inbox_24"
        android:title="@string/inbox" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_outline_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="Settings" />

</menu>