<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.sejo.jobs233.fragments.main.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/projectsFragment"
        android:name="com.sejo.jobs233.fragments.main.ProjectsFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_projects">
        <action
            android:id="@+id/action_projectsFragment_to_projectBidActivity"
            app:destination="@id/projectBidActivity" />
        <action
            android:id="@+id/action_projectsFragment_to_projectViewActivity"
            app:destination="@id/projectViewActivity" />
    </fragment>
    <fragment
        android:id="@+id/inboxFragment"
        android:name="com.sejo.jobs233.fragments.main.InboxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragment_inbox">
        <action
            android:id="@+id/action_inboxFragment_to_messagingActivity"
            app:destination="@id/messagingActivity" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.sejo.jobs233.fragments.main.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/messagingActivity"
        android:name="com.sejo.jobs233.activities.MessagingActivity"
        android:label="activity_messaging"
        tools:layout="@layout/activity_messaging" />
    <activity
        android:id="@+id/projectBidActivity"
        android:name="com.sejo.jobs233.activities.ProjectBidActivity"
        android:label="activity_project_bid"
        tools:layout="@layout/activity_project_bid">
        <argument
            android:name="projectBidID"
            app:argType="integer" />
    </activity>
    <activity
        android:id="@+id/projectViewActivity"
        android:name="com.sejo.jobs233.activities.ProjectViewActivity"
        android:label="activity_project_view"
        tools:layout="@layout/activity_project_view">
        <argument
            android:name="projectViewID"
            app:argType="integer" />
    </activity>
    <fragment
        android:id="@+id/walletFragment"
        android:name="com.sejo.jobs233.fragments.main.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />
    <activity
        android:id="@+id/editProfileActivity"
        android:name="com.sejo.jobs233.activities.EditProfileActivity"
        android:label="@string/edit_profile"
        tools:layout="@layout/activity_edit_profile" />
</navigation>